fix repeating